@@ -1,8 +1,16 @@
+2011-03-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c,
+	  src/z80/ralloc.c,
+	  src/z80/main.c:
+	  Code reorganization for a more accurate cost function.
+	  
 2011-03-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCralloc.hpp,
 	  src/z80/z80.h:
-	  Solaris fix?
+	  Solaris fix.
 
 2011-03-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
